# logseq-cli

./: .gitignore  Cargo.toml  README.md
src/: clap_cli.rs  main.rs
src/logseq_api/: client.rs
