[package]
name = "logseq-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blocking = "1.3.0"
chrono = "0.4.23"
clap = { version = "4.1.4", features = ["derive"] }
openssl = { version = "0.10.45", features = ["vendored"] }
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
